k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: innogen-backend
  labels:
    app: innogen
spec:
  type: ClusterIP
  selector:
    app: innogen
    tier: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: innogen-postgres
  labels:
    app: innogen
spec:
  type: ClusterIP
  selector:
    app: innogen
    tier: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: innogen-redis
  labels:
    app: innogen
spec:
  type: ClusterIP
  selector:
    app: innogen
    tier: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
